# GGL

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: ggl.h  ggl_internal.h
include/misc/: ggl_defines.h  ggl_macros.h  ggl_types.h
include/modules/: ggl_core.h  ggl_input.h  ggl_math.h  ggl_renderer.h  ggl_shader.h  ggl_texture.h  ggl_window.h
lib/glad/include/glad/: gl.h
resources/: s_circle.frag  s_circle.vert  s_convex.frag  s_convex.vert  s_rectangle.frag  s_rectangle.vert  s_triangle.frag  s_triangle.vert
samples/checkerboard/: build.sh  main.c
samples/showcase/: build.sh  main.c
samples/snake_game/: build.sh  main.c  program
samples/test_game/: a.out  build.sh  main.c  program
src/core/: ggl_context.c  ggl_cursor.c  ggl_init.c
src/input/: ggl_cursor.c  ggl_debug_close.c  ggl_input_manager.c
src/math/: ggl_collision.c  ggl_coords_helper.c  ggl_distance_helper.c
src/renderer/: ggl_geometry_init.c  ggl_shape_data.c
src/renderer/geometry/: ggl_circle.c  ggl_convex.c  ggl_rectangle.c  ggl_triangle.c
src/shader/: ggl_shader_compiler.c  ggl_shader_helper.c
src/texture/: ggl_texture_loader.c
src/utils/shader/: ggl_shader_compiler.c
src/window/: ggl_window_helper.c  ggl_window_manager.c
